# loss-landscape-anim

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
loss_landscape_anim/: __init__.py  _plot.py  compare_optimizers.py  data.py  datamodule.py  loss_landscape.py  main.py  model.py  plot.py
loss_landscape_anim/sample_data/: spirals.p
tests/: test_loss_landscape_anim.py
tests/test_data/: lossgrid.p
tests/test_models/: model.pt
