[tool.poetry]
name = "loss-landscape-anim"
version = "0.1.0"
description = ""
authors = ["Logan Yang <logancyang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
torch = "^1.7.1"
matplotlib = "^3.3.3"
fastcore = "^1.3.16"
pytorch-lightning = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"
mypy = "^0.790"
codecov = "^2.1.10"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
