[tool.poetry]
name = "loss-landscape-anim"
version = "0.1.9"
description = "Animate the optimization trajectory of neural networks"
authors = ["LoganYang <logancyang@gmail.com>"]
keywords = [
    "pytorch", "loss_landscape", "pytorch_lightning", "deep_learning", "visualization"
]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/logancyang/loss-landscape-anim"
repository = "https://github.com/logancyang/loss-landscape-anim"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
torch = "^1.7.1"
matplotlib = "^3.3.3"
pytorch-lightning = "^1.1.2"
sklearn = "^0.0"
torchvision = "^0.8.2"
importlib_resources = "^5.0.0"
tqdm = "^4.56.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"
mypy = "^0.790"
codecov = "^2.1.10"
black = "^20.8b1"
flake8 = "^3.8.4"
twine = "^3.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
