[tool.poetry]
name = "loss-landscape-anim"
version = "0.1.10"
description = "Animate the optimization trajectory of neural networks"
authors = ["LoganYang <logancyang@gmail.com>"]
keywords = [
    "pytorch", "loss_landscape", "pytorch_lightning", "deep_learning", "visualization"
]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/logancyang/loss-landscape-anim"
repository = "https://github.com/logancyang/loss-landscape-anim"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.3"
torch = "^2.1.2"
matplotlib = "^3.8.2"
pytorch-lightning = "^2.1.3"
scikit-learn = "^1.4.0"
torchvision = "^0.16.2"
importlib_resources = "^6.1.1"
tqdm = "^4.66.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"
codecov = "^2.1.10"
black = "^20.8b1"
flake8 = "^3.8.4"
twine = "^3.3.0"
pylint = "^2.6.0"
pydocstyle = "^5.1.1"

[build-system]
requires = ["poetry>=1.7"]
build-backend = "poetry.masonry.api"
